# doas-rust

./: Cargo.toml  Makefile  doas.conf  justfile  test-config
.devcontainer/: Dockerfile  devcontainer.json
src/: auth.rs  config.pest  config.rs  main.rs  timestamp.rs
