[package]
name = "doas-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.11", features = ["derive"] }
pam = "0.7.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rpassword = "7.0.0"
syslog = "6.0.1"
users = "0.11.0"
