[package]
name = "doas-rust"
version = "0.1.0"
edition = "2021"
description = "A simple, secure, and fast alternative to sudo and doas in Rust, sporting full compatability with doas."
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.11", features = ["derive"] }
nix = { version = "0.24.2", features = ["process", "fs"] }
pam-client = "0.5.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rpassword = "7.0.0"
syslog = "6.0.1"
users = "0.11.0"
procfs = "0.14.0"
lazy_static = "1.4.0"
